--- a/1 From Scratch TP EX/EX/2. CSS/1. Cours CSS/9. [Projet 1 présentation] Intégration Gaming Campus/assets/img/style3.css
+++ b/1 From Scratch TP EX/EX/2. CSS/1. Cours CSS/9. [Projet 1 présentation] Intégration Gaming Campus/assets/img/style3.css
@@ -99,7 +99,6 @@ header .main-header h1 {
   font-weight: 300;
   line-height: 1.6;
   text-align: center;
-
   padding: 1rem 0;
   margin: 0 auto;
   color: #fff;
@@ -219,21 +218,36 @@ header .main-header button i {
 
 /********* NEWS-PART ********/
 
+.news-part {
+  background-color: #deebe5;
+  margin-top: -1.3rem;
+}
+
 .header-news {
   margin-top: 2rem;
+  background-color: #deebe5;
+  width: 100%;
+}
+
+.left-part, .right-part {
+  background-color: #deebe5;
+  margin-top: -.7rem;
+  padding-top: 5rem;
 }
 
 .header-news .left-part {
   /* display: flex;
     flex-direction: column; */
   width: 60%;
+  background-color: #deebe5;
+  height: 100%;
 }
 
 .header-news .left-part h2 {
   font-size: 1.5rem;
   font-weight: 300;
   line-height: 1.6;
-
+  background-color: #deebe5;
   text-transform: uppercase;
   padding: 2rem 0;
   margin: 0 auto;
@@ -248,11 +262,12 @@ header .main-header button i {
   line-height: 1.6;
   text-align: left;
   padding: 0rem 0;
-  margin: 0 auto;
+  margin: 2rem auto;
   margin-left: 20.38rem;
   margin-top: -2rem;
   width: 70%;
   color: #000;
+  background-color: #deebe5;
 }
 
 .header-news .right-part {
@@ -271,7 +286,7 @@ header .main-header button i {
   display: block;
   padding: 1rem 0.5rem;
   margin: 0 auto;
-  margin-top: 0.4rem;
+  margin-top: 5.8rem;
   margin-right: 30.38rem;
   background-color: #00000000;
   color: #000000;
@@ -301,14 +316,13 @@ header .main-header button i {
   align-items: center;
   padding:0;
   /* padding-top: 1rem; */
-
+  background-color: #deebe5;
   color: #fff;
   width: 100%;
   margin: 0 auto;
 }
 
 .main-news-container {   /** 26/02/25 */
-  
   display: flex;
   width: 73%;
 }
@@ -329,7 +343,6 @@ header .main-header button i {
 .main-news-container:nth-child(1){
   display: flex;
   margin-top: 5rem;
-  
 }
 
 .main-news-container div .mn-pic {
@@ -371,6 +384,7 @@ header .main-header button i {
   margin: 0;
   margin-right: 1.7rem;
   text-align: left;
+  background-color: #deebe5;
 }
 
 
@@ -398,13 +412,116 @@ header .main-header button i {
   width: 20rem;
 }
 
-
-
 .main-news-container div .link a i {
-  
-  
   margin-left: 1rem;
 }
+
+/************ CONTACT **********/
+
+.contact {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: 0 auto;
+  
+  padding: 5rem 5rem;
+  
+  background-color: #000;
+  color: #fff;
+}
+
+.contact .contact-container {
+  display: flex;
+  flex-wrap: wrap;
+  float:left;
+  color: #fff;
+}
+
+.contact .contact-container .contact-list {
+  display: flex;
+  flex-direction: row;
+ 
+  padding: 0;
+  margin: 0;
+  width: 100%;
+  color: #fff;
+}
+
+.contact .contact-container .contact-list .list {
+ display: flex;
+  
+  
+  
+}
+
+.contact .contact-container .contact-list .list #contact-img {
+  display: flex;
+  justify-content: flex-start;
+}
+
+.contact .contact-container .contact-list .list #contact-img img {
+  width: 230px;
+  height: 250px;
+}
+
+.contact-list .list:nth-child(2) h5 ,.infos-p {
+  display: flex;
+  
+}
+
+
+.contact .contact-container .contact-list .list p {
+  width: 300px;
+  font-weight: 300;
+  line-height: 1.6;
+  text-align: center;
+  padding: 1rem 0;
+  margin: 0;
+  color: #000000;
+}
+
+.contact .contact-container .medias-text {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 0;
+  margin: 0;
+  width: 100%;
+  color: #fff;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
