--- a/1 From Scratch TP EX/EX/2. CSS/1. Cours CSS/9. [Projet 1 présentation] Intégration Gaming Campus/assets/img/style3.css
+++ b/1 From Scratch TP EX/EX/2. CSS/1. Cours CSS/9. [Projet 1 présentation] Intégration Gaming Campus/assets/img/style3.css
@@ -633,14 +633,17 @@ header .main-header button i {
   width: 65%;
   margin: 0;
   margin-top: 5rem;
-  
+  margin-bottom: -1rem;
   
 }
 
 .contact-medias .medias-text p {
   color: #000000; 
   font-size: 16px;
-  padding: 0;
+  margin-top: 1rem;
+  margin-right: 0;
+  margin-left: 0;
+  margin-bottom: 0;
   transform: translateX(-25rem);
   /* padding-top: 6rem; */
 }
